# Manta-legacy

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh
.github/workflows/: cmake.yml  linuxbuild.yml
dependencies/: WHY.md
dependencies/glm/: manual.md
dependencies/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
dependencies/imgui/docs/: README.md
features/: ENGINE.md  RENDERING.md  TEMPLATE.md
projects/engine/: CMakeLists.txt
projects/engine/public/: console.cpp  console.hpp  dynamiclib.hpp  manta_errcodes.hpp  manta_macros.hpp  renderer.hpp
projects/engine/public/assets/: manta_package.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
projects/engine/public/common/: common_console.cpp  common_console.hpp
projects/engine/public/entities/: camera.hpp  entity.cpp  entity.hpp  light.hpp  world.cpp  world.hpp
projects/engine/src/: main.cpp  manta.hpp  manta_macros.hpp
projects/engine/src/actors/: actor.cpp  actor.hpp  world.cpp  world.hpp
projects/engine/src/actors/engine/: camera.cpp  camera.hpp  light.cpp  light.hpp  skybox.cpp  skybox.hpp
projects/engine/src/assets/: cubemap.cpp  cubemap.hpp  manta_packer.cpp  manta_packer.hpp  material.cpp  material.hpp  model.cpp  model.hpp  resources.cpp  resources.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
projects/engine/src/assets/material_values/: material_color.cpp  material_color.hpp  material_float.cpp  material_float.hpp  material_texture.cpp  material_texture.hpp  material_value.hpp
projects/engine/src/common/: spinner.hpp
projects/engine/src/components/: component.hpp
projects/engine/src/components/engine/: renderer.cpp  renderer.hpp
projects/engine/src/console/: common_console.cpp  common_console.hpp  console.cpp  console.hpp
projects/engine/src/core/: engine.cpp  engine.hpp
projects/engine/src/core/ui/: stats_window.cpp  stats_window.hpp
projects/engine/src/entities/: camera.cpp  camera.hpp  entity.cpp  entity.hpp  light.cpp  light.hpp  world.cpp  world.hpp
projects/engine/src/game/: game.hpp
projects/engine/src/game/demo/: demo.cpp  demo.hpp
projects/engine/src/modular/: dynamiclib.cpp
projects/engine/src/rendering/: renderer.hpp
projects/engine/src/rendering/opengl/: gl3_renderer.cpp  gl3_renderer.hpp  glrenderer.cpp  glrenderer.hpp
projects/engine/src/rendering/opengl/assets/: glcubemap.cpp  glcubemap.hpp  glmodel.cpp  glmodel.hpp  glshader.cpp  glshader.hpp  glshaderprogram.cpp  glshaderprogram.hpp  gltexture.cpp  gltexture.hpp  glvertexbuffer.cpp
projects/engine/src/scripting/mono/: monoruntime.cpp  monoruntime.hpp
projects/engine_data/: autoexec
projects/engine_data/engine/base/shaders/: deferred_lighting.glsl  skybox.glsl  standard.glsl
projects/engine_data/shaders/: Lighting.glsl  Lighting_NonBRDF.glsl  Standard.glsl  Standard_old.glsl.txt  Test.glsl
projects/mantamono/internal/: MMDESC  logging.cs  test.cs
projects/mantamono/src/: logging.cs  monomain.cs
projects/renderers/opengl/: CMakeLists.txt
projects/renderers/opengl/public/: gl3_renderer.hpp  opengl3_api.hpp
projects/renderers/opengl/public/assets/: glshaderprogram.hpp  glvertexbuffer.hpp
projects/renderers/opengl/src/: gl3_renderer.cpp  libmain.cpp  opengl3_api.cpp
projects/renderers/opengl/src/assets/: glshaderprogram.cpp  glvertexbuffer.cpp
projects/renderers/vulkan/: CMakeLists.txt
raw_files/: ShaderTester.blend
